# OOP_lab7

./: CMakeLists.txt  functions.cpp  functions.h  log.txt  main  main.cpp  npcs.txt
